--- a/src/Quideo.css
+++ b/src/Quideo.css
@@ -1,10 +1,13 @@
 .quideo {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    text-align: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+}
+
+table {
+  width: 100%;
+  padding: 10px;
 }
