--- a/src/Quideo.css
+++ b/src/Quideo.css
@@ -1,5 +1,5 @@
 .quideo {
-  background-color: #282c34;
+  background-color: rgb(40, 41, 44);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
