--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,3 +1,24 @@
 button {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    background-color: #008CBA;; /* Blue */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    /*display: inline-block;*/
+    font-size: 16px;
+    float: left;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.topics {
+    display: flex;   
+    flex-direction: column;
+}
+button:hover {
+    background-color: #F0F8FF; /* AliceBlue */
+    color: black;
 }
