--- a/src/Tag.css
+++ b/src/Tag.css
@@ -3,10 +3,11 @@
     padding: 10px;
     border-radius: 5px;
     border: 2px solid white;
-    font-size: 200%;
+    font-size: 150%;
     color: black;
     margin: 10px;
     cursor: pointer;
+    width: 15vw;
 }
 .tag:hover {
     background-color: skyblue;
