--- a/src/MultipleChoice.css
+++ b/src/MultipleChoice.css
@@ -3,42 +3,47 @@
   flex-direction: row;
   justify-content: center;
 }
+
 .mc-answer {
-    background-color: rgb(43, 43, 43);
-    padding: 5px;
-    color: white;
-    font-size: 100%;
-    width: 60vw;
-    border: 2px solid white;
-    border-radius: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  background-color: rgb(43, 43, 43);
+  padding: 5px;
+  color: white;
+  font-size: 100%;
+  width: 60vw;
+  border: 2px solid white;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .mc-answer.mc-chosen {
-    margin-bottom: 0px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-    border-bottom: 0px solid white;
+  margin-bottom: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom: 0 solid white;
 }
+
 .mc-explanation {
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    background-color: #D3F2AF;
-    color: rgb(53, 53, 53);
-    width: 60vw;
-    margin: auto;
-    margin-top: 0px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    display: none;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: #d3f2af;
+  color: rgb(53, 53, 53);
+  width: 60vw;
+  margin: auto;
+  margin-top: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: none;
 }
+
 .mc-explanation.mc-correct {
-  background-color: #D3F2AF;
+  background-color: #d3f2af;
 }
+
 .mc-explanation.mc-incorrect {
   background-color: rgb(236, 122, 122);
 }
+
 .mc-explanation.mc-chosen {
-    display: inherit;
+  display: inherit;
 }
