--- a/src/QuestionViewer.css
+++ b/src/QuestionViewer.css
@@ -1,3 +1,7 @@
+.question-view {
+  width: 95vw;
+}
+
 .question-tags {
   border-bottom: 1px solid grey;
   display: inline-flex;
@@ -43,6 +47,7 @@
   color: rgb(43, 43, 43);
   background-color: white;
   cursor: pointer;
+  margin: 10px;
 }
 
 .question-hints button.no-hints {
