--- a/src/Prompt.css
+++ b/src/Prompt.css
@@ -17,9 +17,10 @@
   border-radius: 5px;
   border: 1px solid black;
   background-color: palegreen;
-  font-weight: 100;
-  margin: 10px;
+  margin-bottom: 20px;
+  padding: 20px;
   color: black;
+  cursor: pointer;
 }
 
 .user-answer {
@@ -52,11 +53,11 @@
 
 .show-answer .code-editor textarea {
   width: 0;
-  padding: 0;
-  margin: 0;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 0;
+  padding-right: 0;
   opacity: 0;
-
-  /* transition: width 1s 1s ease-in-out, padding 1s 1s, height 1s 1s, margin 1s 1s, opacity 1s ease-in-out; */
 }
 
 .user-answer pre {
@@ -67,21 +68,17 @@
   width: 100%;
 }
 
-.show-answer .user-answer {
-  border-right: 1px solid white;
-}
-
 .actual-answer {
   visibility: hidden;
-  width: 0%;
+  opacity: 0;
+  max-height: 0;
+  height: 0;
 }
 
 .show-answer .actual-answer {
+  opacity: 1;
   visibility: visible;
-  width: 100%;
-  border-left: 1px solid white;
-}
-
-.answer {
-  display: flex;
+  max-height: 100vh;
+  height: auto;
+  transition: opacity 0.25s ease-in-out 0.25s, max-height 1s ease-in-out 0s;
 }
