Override highlighting of builtins

--- a/src/question-viewer/CodingAnswer.css
+++ b/src/question-viewer/CodingAnswer.css
@@ -37,3 +37,8 @@
   color: black;
   cursor: pointer;
 }
+
+/* Override the builtin-function highlighting */
+.code-area .ace-sqlserver .ace_support.ace_function {
+  color: black;
+}
