--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 125%;
   color: white;
   text-align: center;
+}
+
+button,
+textarea {
+  font-size: 100%;
 }
