Fix accessible color for grey tags

--- a/src/question-viewer/Tag.css
+++ b/src/question-viewer/Tag.css
@@ -52,9 +52,10 @@
 
 .tag.tag-grey {
   background-color: slategray;
-  color: black;
+  color: white;
 }
 
 .tag.tag-grey:hover {
   background-color: lightgray;
+  color: black;
 }
