--- a/src/question-viewer/Tag.css
+++ b/src/question-viewer/Tag.css
@@ -1,13 +1,13 @@
 .tag {
   background-color: lightblue;
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
   border: 2px solid white;
   font-size: 150%;
   color: black;
-  margin: 10px;
+  margin: 5px;
   cursor: pointer;
-  width: 25vw;
+  width: auto;
 }
 
 .tag:hover {
