Add editing and moving ability

--- a/src/question-editor/MultipleChoice.css
+++ b/src/question-editor/MultipleChoice.css
@@ -36,5 +36,23 @@
   color: rgb(250, 132, 132);
   font-size: 200%;
   margin-right: 20px;
+  margin-left: 20px;
   cursor: pointer;
+}
+
+.choice-movers {
+  display: flex;
+  flex-direction: column;
+}
+
+.single-choice .choice-movers svg {
+  color: lightgreen;
+}
+
+.single-choice .choice-movers.no-up svg:first-child {
+  visibility: hidden;
+}
+
+.single-choice .choice-movers.no-down svg:last-child {
+  visibility: hidden;
 }
