Move ace editor overrides to top level

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,8 @@ button,
 textarea {
   font-size: 100%;
 }
+
+/* Override the builtin-function highlighting */
+.ace_editor.ace-sqlserver .ace_support.ace_function {
+  color: black;
+}
