--- a/src/question-viewer/Prompt.css
+++ b/src/question-viewer/Prompt.css
@@ -1,30 +1,58 @@
 .prompt {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin: 15px;
+  max-width: 80vw;
 }
 
 .user-answer {
-  width: 50vw;
-  white-space: nowrap;
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
   border: 1px solid white;
   resize: vertical;
   border-radius: 8px;
   font-family: 'Courier New', Courier, monospace;
   padding: 1em;
   visibility: visible;
+  margin: 15px;
 }
 
 .actual-answer {
-  visibility: hidden;
   opacity: 0;
-  max-height: 0;
-  height: 0;
+  width: 50%;
+  text-align: center;
+  transition: opacity 0.5s ease-in-out;
 }
 
-.show-answer .actual-answer {
+.answer {
+  text-align: left;
+  width: 35%;
+}
+
+.show-answer.actual-answer {
   opacity: 1;
-  visibility: visible;
-  max-height: 100vh;
   height: auto;
-  transition: opacity 0.25s ease-in-out 0.25s, max-height 1s ease-in-out 0s;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.prompt-question {
+  display: flex;
+}
+
+.prompt-buttons {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.header-invisible {
+  display: flex;
+}
+
+.header-invisible > div:first-child {
+  visibility: hidden;
+}
+
+.hint-container {
+  width: 80%;
 }
