Fix minor error with moving to the side

--- a/src/question-viewer/Blanks.css
+++ b/src/question-viewer/Blanks.css
@@ -32,6 +32,10 @@
   transition: white-space 0s ease-in-out 0.5s;
 }
 
+.question-area.hide-answer > .filled-blanks input {
+  display: none;
+}
+
 .btn-show-answer {
   padding: 20px;
   margin: 10px;
