--- a/src/question-viewer/MultipleChoice.css
+++ b/src/question-viewer/MultipleChoice.css
@@ -1,5 +1,5 @@
-.mc-question {
-  display: inline-flex;
-  flex-direction: row;
+.mc-answers {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
 }
