--- a/src/utility/MarkdownArea.css
+++ b/src/utility/MarkdownArea.css
@@ -9,6 +9,8 @@
   max-width: 90vw;
   text-align: left;
   padding: 10px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
