--- a/src/question-editor/PartEditor.css
+++ b/src/question-editor/PartEditor.css
@@ -25,3 +25,10 @@
 .edit-confirmed-btn {
   background-color: lightblue;
 }
+
+.question-editor-parts {
+  border: 5px solid white;
+  margin: 10px;
+  border-radius: 8px;
+  padding: 10px;
+}
