--- a/src/question-editor/PartEditor.css
+++ b/src/question-editor/PartEditor.css
@@ -1,5 +1,7 @@
 .part-editor {
   width: 90vw;
+  border: 5px solid white;
+  border-radius: 8px;
 }
 
 .specific-editor.editor-hide {
@@ -13,7 +15,8 @@
 }
 
 .part-add-btn,
-.edit-confirmed-btn {
+.edit-confirmed-btn,
+.hint-add-btn {
   padding: 20px;
   margin: 10px;
   border: 1px solid white;
@@ -26,9 +29,13 @@
   background-color: lightblue;
 }
 
+.hint-add-btn:disabled {
+  cursor: not-allowed;
+  background-color: rgb(88, 88, 88);
+  color: white;
+}
+
 .question-editor-parts {
-  border: 5px solid white;
   margin: 10px;
-  border-radius: 8px;
   padding: 10px;
 }
