--- a/src/utility/OrderedList.css
+++ b/src/utility/OrderedList.css
@@ -4,6 +4,11 @@
   align-items: center;
 }
 
+.list-movers {
+  display: flex;
+  flex-direction: column;
+}
+
 .list-item .list-ops svg,
 .list-item .list-movers svg {
   color: rgb(250, 132, 132);
@@ -13,21 +18,21 @@
   cursor: pointer;
 }
 
+.list-item .list-movers svg {
+  color: lightgreen;
+}
+
+.list-item .list-ops {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .list-item .list-ops svg:first-child {
   color: rgb(158, 224, 247);
 }
 
 .list-item .list-ops svg:last-child {
   color: rgb(250, 132, 132);
-}
-
-.list-movers {
-  display: flex;
-  flex-direction: column;
-}
-
-.list-item .list-movers svg {
-  color: lightgreen;
 }
 
 .list-item .list-movers.no-up svg:first-child {
