--- a/src/question-editor/Editor.css
+++ b/src/question-editor/Editor.css
@@ -1,3 +1,14 @@
 .question-editor {
   width: 90vw;
 }
+
+.preview-btn {
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid white;
+  border-radius: 5px;
+  cursor: pointer;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
