--- a/src/question-viewer/Question.css
+++ b/src/question-viewer/Question.css
@@ -37,3 +37,16 @@
   text-align: left;
   margin-left: 3vw;
 }
+
+.question-preview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.question-preview .question-view {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
