Add minor UI improvements and fixes

--- a/src/question-viewer/ShortAnswer.css
+++ b/src/question-viewer/ShortAnswer.css
@@ -4,6 +4,11 @@
   width: 100%;
 }
 
+.short-prompt {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .short-answer-area > .short-user {
   display: flex;
   justify-content: left;
