--- a/src/question-editor/Editor.css
+++ b/src/question-editor/Editor.css
@@ -1,5 +1,5 @@
 .question-editor {
-  width: 90vw;
+  width: 100%;
 }
 
 .preview-btn {
@@ -11,4 +11,17 @@
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
+}
+
+.question-preview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.question-preview .question-view {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
