--- a/src/question-editor/PartEditor.css
+++ b/src/question-editor/PartEditor.css
@@ -1,5 +1,4 @@
 .part-editor {
-  width: 90vw;
   border: 5px solid white;
   border-radius: 8px;
 }
@@ -23,6 +22,11 @@
   border-radius: 5px;
   cursor: pointer;
   background-color: lightgreen;
+}
+
+.part-add-btn {
+  width: 50%;
+  font-size: 200%;
 }
 
 .edit-confirmed-btn {
