Prevent long lines from extending beyond the display

--- a/src/question-viewer/Blanks.css
+++ b/src/question-viewer/Blanks.css
@@ -32,6 +32,10 @@
   transition: white-space 0s ease-in-out 0.5s;
 }
 
+.question-area.show-answer > .filled-blanks * {
+  white-space: normal;
+}
+
 .question-area.hide-answer > .filled-blanks input {
   display: none;
 }
