--- a/src/question-editor/TagChooser.css
+++ b/src/question-editor/TagChooser.css
@@ -26,3 +26,10 @@
 .selected-tags .tag {
   font-size: 125%;
 }
+
+.selected-tags .tag:first-child {
+  font-size: 300%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
