--- a/src/question-editor/MarkdownEditor.css
+++ b/src/question-editor/MarkdownEditor.css
@@ -20,3 +20,11 @@
   overflow: auto;
   white-space: normal;
 }
+
+.markdown-syntax-btn {
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid white;
+  border-radius: 5px;
+}
