--- a/src/question-viewer/Blanks.css
+++ b/src/question-viewer/Blanks.css
@@ -41,6 +41,10 @@
   white-space: pre;
 }
 
+.question-area.show-answer > .filled-blanks span {
+  display: inline-block;
+}
+
 .question-area.hide-answer > .filled-blanks input {
   display: none;
 }
