--- a/src/utility/MarkdownArea.css
+++ b/src/utility/MarkdownArea.css
@@ -5,7 +5,6 @@
   border: 8px solid white;
   border-radius: 5px;
   display: block;
-  width: fit-content;
   max-width: 90vw;
   text-align: left;
   padding: 10px;
@@ -13,4 +12,8 @@
   margin-right: auto;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.markdown-preview img {
+  max-width: 100%;
 }
