--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,15 @@
   justify-content: center;
   font-size: 125%;
   color: white;
-  text-align: center;
+  padding: 20px;
+}
+
+.App h1 {
+  font-size: 300%;
+}
+
+.App h2 {
+  font-size: 200%;
 }
 
 button,
