--- a/src/question-editor/HintEditor.css
+++ b/src/question-editor/HintEditor.css
@@ -5,6 +5,9 @@
   border-radius: 5px;
   cursor: pointer;
   background-color: lightgreen;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hint-add-btn:disabled {
