--- a/src/question-editor/PartEditor.css
+++ b/src/question-editor/PartEditor.css
@@ -25,8 +25,11 @@
 }
 
 .part-add-btn {
-  width: 50%;
+  width: 80%;
   font-size: 200%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .edit-confirmed-btn {
