--- a/src/question-viewer/Question.css
+++ b/src/question-viewer/Question.css
@@ -10,12 +10,8 @@
 }
 
 .question-difficulty {
-  margin: 20px;
-}
-
-.question-difficulty p {
-  font-size: 150%;
-  margin-bottom: 0;
+  margin-top: 5px;
+  margin-bottom: 30px;
 }
 
 .question-difficulty svg {
@@ -36,4 +32,8 @@
 .question-header {
   text-align: left;
   margin-left: 3vw;
+}
+
+.question-title {
+  margin-bottom: 0;
 }
